// Vitest Snapshot v1

exports[`DatePicker > DatePicker baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-picker />
  <t-date-picker
    allow-input=""
    clearable=""
    placeholder="可清除、可输入的日期选择器"
  />
</t-space>
`;

exports[`DatePicker > DatePicker customIconVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-picker
    clearable=""
    prefix-icon="() => h(__vite_ssr_import_0__.BrowseIcon)"
  />
</t-space>
`;

exports[`DatePicker > DatePicker datePresetsAltVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-range-picker
    presets="[object Object]"
  />
  <t-date-range-picker
    enable-time-picker=""
    presets="[object Object]"
  />
</t-space>
`;

exports[`DatePicker > DatePicker dateRangeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-range-picker
    allow-input=""
    clearable=""
  />
  <t-date-range-picker
    allow-input=""
    clearable=""
    enable-time-picker=""
  />
</t-space>
`;

exports[`DatePicker > DatePicker dateTimeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-picker
    allow-input=""
    clearable=""
    enable-time-picker=""
  />
  <t-date-picker
    allow-input=""
    clearable=""
    enable-time-picker=""
    format="YYYY-MM-DD a hh:mm:ss"
  />
</t-space>
`;

exports[`DatePicker > DatePicker disableDateVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-picker
    disable-date="2020-12-27T08:00:00+08:00,2020-12-26T08:00:00+08:00"
    placeholder="禁用昨天、前天"
  />
  <t-date-picker
    disable-date="[object Object]"
    placeholder="明后三天禁用"
  />
  <t-date-picker
    disable-date="function (date) { return _vm.dayjs(date).day() === 6; }"
    placeholder="禁用所有周六"
  />
  <t-date-picker
    disable-date="[object Object]"
    placeholder="禁用最近 3 天外的日期"
  />
  <t-date-picker
    disable-date="[object Object]"
    enable-time-picker=""
    placeholder="禁用日期精确到时间"
    time-picker-props="[object Object]"
  />
  <t-date-range-picker
    disable-date="[object Object]"
    placeholder="禁用最近 5 天外的日期"
  />
</t-space>
`;

exports[`DatePicker > DatePicker firstDayOfWeekVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-radio-group
    variant="default-filled"
  >
    <t-radio-button
      value="1"
    >
      1
    </t-radio-button>
    <t-radio-button
      value="2"
    >
      2
    </t-radio-button>
    <t-radio-button
      value="3"
    >
      3
    </t-radio-button>
    <t-radio-button
      value="4"
    >
      4
    </t-radio-button>
    <t-radio-button
      value="5"
    >
      5
    </t-radio-button>
    <t-radio-button
      value="6"
    >
      6
    </t-radio-button>
    <t-radio-button
      value="7"
    >
      7
    </t-radio-button>
  </t-radio-group>
  <t-date-picker
    first-day-of-week="1"
  />
</t-space>
`;

exports[`DatePicker > DatePicker monthVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-picker
    allow-input=""
    clearable=""
    mode="month"
  />
  <t-date-range-picker
    allow-input=""
    clearable=""
    mode="month"
  />
</t-space>
`;

exports[`DatePicker > DatePicker panelVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <div
    class="date-picker-panel-border"
  >
    <t-date-picker-panel
      on-change="function () { [native code] }"
    />
  </div>
  <div
    class="date-picker-panel-border"
  >
    <t-date-picker-panel
      enable-time-picker=""
      on-change="function () { [native code] }"
    />
  </div>
  <div
    class="date-picker-panel-border"
  >
    <t-date-range-picker-panel
      on-change="function () { [native code] }"
      value="2022-02-16,2022-02-21"
    />
  </div>
  <div
    class="date-picker-panel-border"
  >
    <t-date-range-picker-panel
      enable-time-picker=""
      on-change="function () { [native code] }"
    />
  </div>
</t-space>
`;

exports[`DatePicker > DatePicker quarterVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-picker
    allow-input=""
    clearable=""
    mode="quarter"
  />
  <t-date-range-picker
    allow-input=""
    clearable=""
    mode="quarter"
  />
</t-space>
`;

exports[`DatePicker > DatePicker weekVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-picker
    allow-input=""
    clearable=""
    mode="week"
  />
  <t-date-range-picker
    allow-input=""
    clearable=""
    mode="week"
  />
</t-space>
`;

exports[`DatePicker > DatePicker yearVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-date-picker
    allow-input=""
    clearable=""
    mode="year"
  />
  <t-date-range-picker
    allow-input=""
    clearable=""
    mode="year"
  />
</t-space>
`;
